objects/User_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_after_discount__c</fullName>
        <label>Amount after discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AttendeeLimit__c</fullName>
        <label>AttendeeLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Stripe_Id__c</fullName>
        <label>Customer Stripe Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventLimit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EventLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <formula>IF(ISPICKVAL(Subscription_Type__c,&apos;Yearly&apos;),CreatedDate+365,IF(ISPICKVAL(Subscription_Type__c,&apos;Quarterly&apos;),CreatedDate+90,IF(ISPICKVAL(Subscription_Type__c,&apos;Monthly&apos;),CreatedDate+30,CreatedDate+365)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <referenceTo>BL_Pricing__c</referenceTo>
        <relationshipName>User_Pricing</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscribed_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscribed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <picklist>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UserLimit__c</fullName>
        <label>UserLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Pricing</label>
    <nameField>
        <displayFormat>UP-{000000}</displayFormat>
        <label>User Pricing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>